<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/content_blocking_title">

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/content_blocking_enabled_key"
        android:summary="@string/content_blocking_enabled_summary"
        android:title="@string/content_blocking_enabled_title"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <MultiSelectListPreference
        android:defaultValue="@array/content_blocking_target_value_list"
        android:entries="@array/content_blocking_target_description_list"
        android:entryValues="@array/content_blocking_target_value_list"
        android:key="@string/content_blocking_targets_key"
        android:summary="@string/content_blocking_targets_summary"
        android:title="@string/content_blocking_targets_title"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <PreferenceCategory
        android:title="@string/aislist_category_title"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/aislist_enabled_key"
            android:summary="@string/aislist_enabled_summary"
            android:title="@string/aislist_enabled_title"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <Preference
            android:key="@string/aislist_update_key"
            android:summary="@string/aislist_update_summary"
            android:title="@string/aislist_update_title"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <Preference
            android:key="@string/aislist_status_key"
            android:summary="@string/aislist_not_downloaded"
            android:title="@string/aislist_status_title"
            app:iconSpaceReserved="false"
            app:selectable="false"
            app:singleLineTitle="false" />

        <Preference
            android:key="@string/aislist_about_key"
            android:summary="@string/aislist_about_summary"
            android:title="@string/aislist_about_title"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <EditTextPreference
        android:dialogTitle="@string/blocked_keywords_title"
        android:key="@string/blocked_keywords_key"
        android:title="@string/blocked_keywords_title"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="@string/manage_blocked_channels_key"
        android:title="@string/manage_blocked_channels_title"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="@string/manage_blocked_videos_key"
        android:title="@string/manage_blocked_videos_title"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="@string/clear_blocked_content_key"
        android:summary="@string/clear_blocked_content_summary"
        android:title="@string/clear_blocked_content_title"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

</PreferenceScreen>
