<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_item_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_search_content"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_item_bookmark"
        android:icon="@drawable/ic_playlist_add"
        android:title="@string/bookmark_playlist"
        android:visible="true"
        app:showAsAction="ifRoom"
        tools:visible="true" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_openInBrowser"
        android:orderInCategory="2"
        android:title="@string/open_in_browser"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_append_playlist"
        android:orderInCategory="3"
        android:title="@string/add_to_playlist"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_download_playlist"
        android:icon="@drawable/ic_file_download"
        android:orderInCategory="4"
        android:title="@string/download_playlist"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_learning_content"
        android:orderInCategory="5"
        android:title="@string/learning_mark_content"
        android:visible="false"
        app:showAsAction="never" />
</menu>
